# rs-splited2parquet

./: Cargo.toml  README.md  doc-web.sh  rs-splited2parquet  run.sh
src/: lib.rs  main.rs
